# webots-projects

./: .gitignore  README.md
projects/forest_firefighters/: README.md
projects/forest_firefighters/controllers/autonomous_mavic/: autonomous_mavic.py
projects/forest_firefighters/controllers/autonomous_mavic_v4/: autonomous_mavic_v4.py
projects/forest_firefighters/controllers/fire/: fire.py
projects/forest_firefighters/controllers/mavic/: mavic.py
projects/forest_firefighters/controllers/mavic2pro/: mavic2pro  mavic2pro.c
projects/forest_firefighters/controllers/spot/: spot.py
projects/forest_firefighters/protos/: Fire.proto  Forest.proto  Sassafras.proto  Smoke.proto  UnevenForest.proto  Water.proto
projects/forest_firefighters/protos/Fire/: FlameAppearance.proto  (+1 more)
projects/forest_firefighters/worlds/: .forest_firefighters.wbproj  .mavic_2_pro.wbproj  forest_firefighters.wbt  mavic_2_pro.wbt
projects/nvidia-jetbot-collision-avoidance/: README.md
projects/nvidia-jetbot-collision-avoidance/worlds/: .jetbot_collision_avoidance.wbproj  jetbot_collision_avoidance.wbt
projects/seronet-spawner/: README.md
projects/seronet-spawner/controllers/Spawner_OPC_UA_Station/: .gitignore  CMakeLists.txt  Makefile  Makefile.works  Spawner_OPC_UA_Station.cpp
projects/seronet-spawner/protos/: ConveyorStation.proto  ConveyorStationBelt.proto  ConveyorStationPlatform.proto  ConveyorStationWheel.proto  Kasten.proto  RobotinoConveyorBelt.proto
projects/seronet-spawner/worlds/: .spawner_demo.wbproj  .spawner_seronet.wbproj  spawner_demo.wbt  spawner_seronet.wbt
(+28 files in other folders)
